@@ -17,7 +17,7 @@ global $config;
 
 check_login ();
 
-print_page_header (__('GIS Maps builder'), "images/server_web.png", false, "gis_map_builder", true);
+print_page_header (__('GIS Maps builder'), "images/server_web.png", false, "configure_gis_map", true);
 
 
 require_once ('include/functions_gis.php');
